k8s/deployments/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-trade-catalog-api
  namespace: green-trade
  labels:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: catalog-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: catalog-api
