k8s/deployments/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-trade-mongo-headless
  namespace: green-trade
  labels:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: mongo
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: green-trade-mongo
  namespace: green-trade
  labels:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: mongo
spec:
  type: ClusterIP
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: mongo
