k8s/deployments/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-trade-redis
  namespace: green-trade
  labels:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/name: green-trade
    app.kubernetes.io/component: redis
