k8s/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-trade-ingress
  namespace: green-trade
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: green-trade.local
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: green-trade-orders-api
                port:
                  number: 80
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: green-trade-orders-api
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: green-trade-orders-api
                port:
                  number: 80
          - path: /api/checkout
            pathType: Prefix
            backend:
              service:
                name: green-trade-orders-api
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api/conversations
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: green-trade-catalog-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-trade-frontend-svc
                port:
                  number: 80
